--- a/portfolio.css
+++ b/portfolio.css
@@ -73,9 +73,15 @@ ul {
     color: black;
 }
 
+
+.page {
+    width: 50%;
+    margin: 30px auto;
+}
+
 #skills h3 {
-    text-align: center;
-    margin: 30px;
+    margin-top: 30px;
+    margin-bottom: 20px;
     font-size: 25px;
     font-weight: bold;
 }
