--- a/portfolio.css
+++ b/portfolio.css
@@ -79,6 +79,10 @@ ul {
     margin: 30px auto;
 }
 
+#emoji {
+    margin-bottom: 20px;
+}
+
 #skills h3 {
     margin-top: 30px;
     margin-bottom: 20px;
