--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -20,7 +20,9 @@ time, mark, audio, video {
 }
 
 html * {
-    font-family: Lobster, cursive;
+    font-family: Courier New, Courier, monospace;
+    font-weight: bold;
+    font-style: italic;
     text-align: center;
 }
 
@@ -202,7 +204,7 @@ ul {
     bottom: 40px;
     font-size: 20px;
     margin-top: 0px;
-    width: 220px;
+    width: 250px;
     border: none;
 }
 
@@ -242,7 +244,7 @@ ul {
 	text-decoration:none;
     text-shadow:0px 1px 0px #ffffff;
     outline: none;
-    margin-left: 10px;
+    margin-left: 15px;
 }
 #copy_button:hover {
 	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #dfdfdf), color-stop(1, #ededed));
